tests/should-fail/syntax/type-as-name-4.j
function test takes integer type returns nothing
endfunction
